Fix the README file again, premature pushing

--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-A modified version of Mark Huot's ExpressionEngine Mutli Relation Extension (http://expressionengine.com/forums/viewthread/39595/) extension that uses checkboxes instead of a multi-select.
+A modified version of Mark Huot's ExpressionEngine Mutli Relation Extension (http://expressionengine.com/forums/viewthread/39595/) that uses checkboxes instead of a multi-select.
